--- a/Index.html
+++ b/Index.html
@@ -94,7 +94,7 @@
 <body>
     <header><div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/Pictures/WhatsApp/IMG-20250325-WA0000.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="/IMG-20250325-WA0000.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>nithya K</h1>
             <p>Am  programmer</p>
         </div>
